[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Button_Base_Big.png" type="Texture" id=1]
[ext_resource path="res://Resources/Button_Settings_Normal.png" type="Texture" id=2]
[ext_resource path="res://Resources/Button_Settings_Extra.png" type="Texture" id=3]
[ext_resource path="res://Resources/Button_Info.png" type="Texture" id=4]
[ext_resource path="res://Resources/Button_Credits.png" type="Texture" id=5]
[ext_resource path="res://Resources/PixelText.tres" type="Theme" id=6]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=7]

[node name="Menu" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.141176, 0.392157, 0.745098, 1 )

[node name="BigButtons" type="Node" parent="."]

[node name="PlayButton" type="TextureButton" parent="BigButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 448.0
margin_top = 319.0
margin_right = 464.0
margin_bottom = 327.0
rect_scale = Vector2( 8.00174, 8.00174 )
action_mode = 0
texture_normal = ExtResource( 1 )

[node name="QuitButton" type="TextureButton" parent="BigButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 448.0
margin_top = 400.0
margin_right = 464.0
margin_bottom = 408.0
rect_scale = Vector2( 8.00174, 8.00174 )
action_mode = 0
texture_normal = ExtResource( 1 )

[node name="PlayText" type="RichTextLabel" parent="BigButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 480.0
margin_top = 335.0
margin_right = 520.0
margin_bottom = 351.0
rect_scale = Vector2( 1.97411, 1.97411 )
mouse_filter = 2
theme = ExtResource( 6 )
text = "Play"
scroll_active = false

[node name="QuitText" type="RichTextLabel" parent="BigButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 480.0
margin_top = 415.0
margin_right = 520.0
margin_bottom = 431.0
rect_scale = Vector2( 1.97411, 1.97411 )
mouse_filter = 2
theme = ExtResource( 6 )
text = "Quit"
scroll_active = false

[node name="SmallButtons" type="Node" parent="."]

[node name="InfoButton" type="TextureButton" parent="SmallButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 448.0
margin_top = 479.0
margin_right = 456.0
margin_bottom = 487.0
rect_scale = Vector2( 3.8, 3.8 )
action_mode = 0
texture_normal = ExtResource( 4 )

[node name="SettingButton" type="TextureButton" parent="SmallButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 480.0
margin_top = 479.0
margin_right = 488.0
margin_bottom = 487.0
rect_scale = Vector2( 3.8, 3.8 )
action_mode = 0
texture_normal = ExtResource( 2 )

[node name="ExtraSettingsButton" type="TextureButton" parent="SmallButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 512.0
margin_top = 479.0
margin_right = 520.0
margin_bottom = 487.0
rect_scale = Vector2( 3.8, 3.8 )
action_mode = 0
texture_normal = ExtResource( 3 )

[node name="CreditsButton" type="TextureButton" parent="SmallButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 544.0
margin_top = 479.0
margin_right = 552.0
margin_bottom = 487.0
rect_scale = Vector2( 3.8, 3.8 )
action_mode = 0
texture_normal = ExtResource( 5 )

[node name="Title" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 186.0
margin_top = 95.0
margin_right = 288.0
margin_bottom = 107.0
rect_scale = Vector2( 6.48, 6.48 )
theme = ExtResource( 6 )
text = "Conninternet"
scroll_active = false

[node name="InFront" type="CanvasLayer" parent="."]
layer = 69

[node name="FadeEffect" type="ColorRect" parent="InFront"]
margin_left = 1024.0
margin_top = -1.0
margin_right = 2048.0
margin_bottom = 599.0
mouse_filter = 1
color = Color( 0.141176, 0.392157, 0.745098, 0 )

[node name="Wait" type="Timer" parent="."]
wait_time = 2.0

[node name="Tweens" type="Node" parent="."]

[node name="PlayButton" type="Tween" parent="Tweens"]

[node name="QuitButton" type="Tween" parent="Tweens"]

[node name="PlayButtonText" type="Tween" parent="Tweens"]

[node name="QuitButtonText" type="Tween" parent="Tweens"]

[node name="InfoButton" type="Tween" parent="Tweens"]

[node name="SettingsButton" type="Tween" parent="Tweens"]

[node name="ExtraSettingsButton" type="Tween" parent="Tweens"]

[node name="CreditsButton" type="Tween" parent="Tweens"]

[node name="TitleText" type="Tween" parent="Tweens"]

[connection signal="pressed" from="BigButtons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="BigButtons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="SmallButtons/InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="SmallButtons/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="SmallButtons/ExtraSettingsButton" to="." method="_on_ExtraSettingsButton_pressed"]
[connection signal="pressed" from="SmallButtons/CreditsButton" to="." method="_on_CreditsButton_pressed"]
